<resources>
    <string name="app_name">RutaExperienciaUC</string>

    <string name="derechos_reservados">Todos los derechos reservados</string>


    <string name="title_inicio">Inicio</string>
    <string name="title_favoritos">Favoritos</string>
    <string name="title_sedes">Sedes</string>
    <string name="title_ayuda">Ayuda</string>
    <string name="title_soporte">Soporte</string>
    <string name="btn_escribenos">Escríbenos</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="txt_volver">Volver</string>

    <!-- Diferenciales -->
    <string name="dif_pensamiento_title_1">Pensamiento +</string>
    <string name="dif_pensamiento_title_2">Acción emprendedora</string>
    <string name="dif_pensamiento_desc">Impulsamos el pensamiento más la acción emprendedora a partir de la generación de autoconfianza y el desarrollo del sentido de posibilidad para crear oportunidades y generar valor.</string>

    <string name="dif_bienestar_title_1">Bienestar</string>
    <string name="dif_bienestar_title_2">integral</string>
    <string name="dif_bienestar_desc">Promovemos el bienestar integral constante para alcanzar el desarrollo de nuestros estudiantes, docentes, colaboradoras y colaboradores; en forma preventiva y proactiva.</string>

    <string name="dif_comunidades_title_1">Comunidades</string>
    <string name="dif_comunidades_title_2">colaborativas</string>
    <string name="dif_comunidades_desc">Generamos comunidades colaborativas que se nutren de otras perspectivas, para innovar y emprender y así contribuir activamente a un beneficio colectivo para lograr cambio y acelerar el aprendizaje.</string>

    <!-- Solicitar informacion -->
    <string name="title_solicitar_informacion">Solicitar Información</string>
    <string name="soli_info_nombres"><small>Nombres*</small></string>
    <string name="soli_info_apellido_paterno"><small>Apellido Paterno*</small></string>
    <string name="soli_info_apellido_materno"><small>Apellido Materno*</small></string>
    <string name="soli_info_email"><small>Email*</small></string>
    <string name="soli_info_celular"><small>Celular*</small></string>
    <string name="soli_info_fecha_nacimiento"><small>Fecha de Nacimiento*</small></string>
    <string name="title_modalidad_interes">Modalidad de interés</string>
    <string name="modal_interes_presencial">Presencial</string>
    <string name="modal_interes_semipresencial">SemiPresencial</string>
    <string name="modal_interes_a_distancia">A Distancia</string>
    <string name="title_metodo_contacto">Método de contacto</string>
    <string name="meto_contacto_correo_electronico">Correo Electronico</string>
    <string name="meto_contacto_celular">Celular</string>
    <string name="meto_contacto_WhatsApp">WhatsApp</string>
    <string name="consentimiento">Otorgo expresamente mi consentimiento para que mis datos personales sean tratados de acuerdo con la <b><u>política de tratamiento de datos.</u></b></string>
    <string name="btn_enviar">Enviar</string>

    <!-- PopupSolicitarInfo -->
    <string name="title_popup_solicitar_info">¡FELICITACIONES!</string>
    <string name="popup_comentario">Tú mensaje fue enviado satisfactoriamente, nos estaremos comunicando contigo en el menor tiempo posible.</string>
    <string name="popup_btn_aceptar">Aceptar</string>

    <string-array name="mis_sedes">
        <item>Sede Huancayo</item>
        <item>Sede Cuzco</item>
        <item>Sede Arequipa</item>
        <item>Sede los olivos</item>
    </string-array>

    <string-array name="mis_carreras">
        <item>Ingenieria de sistemas e informatica</item>
        <item>Arquitectura</item>
        <item>Psicologia</item>
        <item>Ingenieria Civil</item>
        <item>Ingenieria Ambiental</item>
    </string-array>

    <!-- Buscar carrera -->
    <string name="hint_ingresar_carrera_pref">Ingrese la carrera de su preferencia</string>
    <string name="confirmacion">confirmación</string>
    <string name="calificar_experiencia_confirmacion">Tu calificación nos ayuda a mejorar. ¿Deseas enviarla?</string>

    <!-- Ruta Experiencia -->
    <string name="title_popup_ruta_experiencia">Ruta de Experiencia UC</string>
    <string name="btn_experiencias">Experiencias</string>
    <string name="plan_estudios">Plan de Estudios</string>

    <!-- Soporte -->
    <string name="soporte_redes_sociales">Buscanos en nuestra redes sociales</string>
    <string name="soporte_inicia_postulacion">Si ya decidiste qué carrera estudiar inicia tu postulación</string>

<!--    listExperiencias-->
    <string name="txt_experiencias">Experiencias</string>

</resources>