<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_favoritos"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/title_favoritos" />

    <item
        android:id="@+id/navigation_sedes"
        android:icon="@drawable/ic_sedes"
        android:title="@string/title_sedes" />

    <item
        android:id="@+id/navigation_inicio"
        android:icon="@drawable/ic_inicio"
        android:title="@string/title_inicio" />

    <item
        android:id="@+id/navigation_ayuda"
        android:icon="@drawable/ic_ayuda"
        android:title="@string/title_ayuda" />

    <item
        android:id="@+id/navigation_soporte"
        android:icon="@drawable/ic_soporte"
        android:title="@string/title_soporte" />

</menu>