<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_inicio">


    <fragment
        android:id="@+id/navigation_favoritos"
        android:name="com.acevedo.rutaexperienciauc.ui.favoritos.FavoritosFragment"
        android:label="@string/title_favoritos"
        tools:layout="@layout/fragment_favoritos" />

    <fragment
        android:id="@+id/navigation_sedes"
        android:name="com.acevedo.rutaexperienciauc.ui.sedes.SedesFragment"
        android:label="@string/title_sedes"
        tools:layout="@layout/fragment_sedes" />

    <fragment
        android:id="@+id/navigation_inicio"
        android:name="com.acevedo.rutaexperienciauc.ui.inicio.InicioFragment"
        android:label="@string/title_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/navigation_ayuda"
        android:name="com.acevedo.rutaexperienciauc.ui.ayuda.AyudaFragment"
        android:label="@string/title_ayuda"
        tools:layout="@layout/fragment_ayuda" />

    <fragment
        android:id="@+id/navigation_soporte"
        android:name="com.acevedo.rutaexperienciauc.ui.soporte.SoporteFragment"
        android:label="@string/title_soporte"
        tools:layout="@layout/fragment_soporte" />
</navigation>