<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmacion"
                    android:textSize="30sp"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/icon_selected"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calificar_experiencia_confirmacion"
                android:gravity="center"
                android:layout_weight="0"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_light"
                android:textSize="16sp"/>

            <RatingBar
                android:id="@+id/rbCantidadEstrellas"
                style="@style/CustomRatingBar"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:numStars="5"
                android:isIndicator="true"
                android:rating="0"
                android:stepSize="1" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAceptar"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="9dp"
                android:layout_height="37dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/degradado"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/style_txt_btn"
                        android:text="@string/btn_aceptar" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCancelar"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="9dp"
                android:layout_height="37dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/style_txt_btn"
                    android:textColor="@color/icon_selected"
                    android:layout_gravity="center"
                    android:text="@string/btn_cancelar" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>



