<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.soporte.SoporteFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSoporteSedes"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soporte_inicia_postulacion"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEscribenos"
        app:layout_constraintTop_toBottomOf="@id/id_sedes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="9dp"
        android:layout_height="37dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/degradado"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/style_txt_btn"
                android:text="@string/btn_escribenos" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_message"
                app:tint="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soporte_redes_sociales"
        android:layout_marginTop="8dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
    </TextView>

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/ibLinkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:src="@drawable/ic_linkedin"
            android:background="@android:color/transparent" />
        <ImageButton
            android:id="@+id/ibFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:src="@drawable/ic_facebook"
            android:background="@android:color/transparent" />
        <ImageButton
            android:id="@+id/ibWhatsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:src="@drawable/ic_whatsapp"
            android:background="@android:color/transparent" />

    </LinearLayout>



    </LinearLayout>
</ScrollView>